--- a/src/sitemap-pages.njk
+++ b/src/sitemap-pages.njk
@@ -10,7 +10,7 @@ layout: null
   {# Homepage #}
   <url>
     <loc>{{ "/" | url | absoluteUrl(site.url) }}</loc>
-    <lastmod>{{ page.inputPath | gitLastMod(buildTime) | isoDate }}</lastmod>
+    <lastmod>{{ page.inputPath | gitLastMod(buildTime) | date("YYYY-MM-DD") }}</lastmod>
     <changefreq>daily</changefreq>
     <priority>1.0</priority>
   </url>
@@ -20,10 +20,9 @@ layout: null
     {% if p.url and p.url != "/404.html" and p.data.permalink != false and not p.data.draft and p.data.robots != "noindex" %}
     <url>
       <loc>{{ p.url | url | absoluteUrl(site.url) }}</loc>
-      <lastmod>{{ p.inputPath | gitLastMod(p.date) | isoDate }}</lastmod>
+      <lastmod>{{ p.inputPath | gitLastMod(p.date) | date("YYYY-MM-DD") }}</lastmod>
       <changefreq>{{ p.data.changefreq or "monthly" }}</changefreq>
       <priority>{{ p.data.priority or "0.6" }}</priority>
-      {# Optional hreflang list: set p.data.alternates = [{lang:"en", url:"/en/page/"}, ...] #}
       {% if p.data.alternates %}
         {{ p.data.alternates | hreflangs(site.url) | safe }}
       {% endif %}
