--- a/src/provider.njk
+++ b/src/provider.njk
@@ -143,7 +143,7 @@ eleventyComputed:
     <h3>Don't contact me</h3>
     <p>I don't do support requests. The site works, the codes work, or they don't. Everything you need to know is already here.</p>
 
-    <p><em>Currently in some airport lounge with overpriced coffee, making sure your next eSIM purchase costs less.</em></p>
+    <p><em>Currently in some airport lounge with mediocre coffee, making sure your next eSIM purchase costs less.</em></p>
   </div>
 </section>
 
